HEAD
	+ Bug fix: implement interfaceChangeDone to handle
	  transitions from static -> nonset. Remove relevant
	  entries from InterfaceRate and TS models and mark
	  modelManager as changed.
	+ Bug fix: don't create builders when there aren't
	  enough interfaces
	+ Add support for ppp configured interfaces
1.4
	+ Minor UI adjustments in titles for new release
1.3.13
	+ Bug fix: InterfaceRate doesn't show duplicates any more
	+ Bug fix: RulesTable is notified by changes on InterfaceRate
	+ Disable ifaceExternalChanged until network observers are complete
	+ Disable logging of iptable rules
	+ Remove migration directory
	+ Do not run migrations from postinst
1.3.6
	+ bug fix: l7 filter rules need to be added to both external and internal
	interfaces to be able to detect traffic properly
	+ Add model to set upload/download rate fields for gateways. This allows
	users to use this module with DHCP configured gateways
	+ bug fix: traffic shaping chains are resetted to all interfaces
	when l7 protocosl are available
1.1.20
	+ fix regression introduced when firewall was changed to execute iptables command
at once
1.1.10
	+ Bugfix:Enable module depends on firewall as well as network in order to work
1.1
	+ Use the new row() and ids() API
1.0.1
	+ Enable module depends on firewall as well as network
0.12.101
	+ Detect if there's a l7 capable kernel using modinfo xt_layer7
0.12.100
	+ Add traffic shaping rules to POSTROUTING 
0.12.99
	+ New release
0.12.2
	+ Add support for l7filter
0.12.1
	+ Bugfix. Fetch value from rate properly
0.12
	+ Add field help to model
0.11.104
	+ Do not return a "removed message" with 0 rows removed
0.11.104
	+ Bugfix. Return empty array and not undef if there are no rules
0.11.103
	+ Bugfix. Extend IptablesRule from Firewall to add setReverseService.
	  To properly add ingress rules
0.11.102
	+ Use the new EBox::Model:Row api
	+ Do not order iptables rules by priority
0.11.101
	+ Fixing typo in actions performed by the module
0.11.100